Test/dafny4/Regression20.dfy.expect
Regression20.dfy(6,12): Error: Undeclared top-level type or type parameter: bv (did you forget to qualify a name or declare a module import 'opened'?)
1 resolution/type errors detected in Regression20.dfy
